# Whylog-AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_and_push.sh  main.py  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/endpoints/: __init__.py  health.py
app/core/: __init__.py  chroma.py  config.py  enums.py  errors.py  gemini.py  logging_middleware.py  responses.py
app/domains/commit/: __init__.py  router.py  schemas.py
docs/: commit_matching_evaluation.md
models/: example.py
routers/: commit.py  decision.py  meeting_analysis.py  transcribe.py
schemas/: decision.py  meeting_analysis.py  transcribe.py
scripts/: evaluate_commit_matching.py
services/: decision_extraction.py  deepgram.py  meeting_analysis_extraction.py  transcript_correction.py
tests/: conftest.py  test_application_commit_matching.py  test_application_commit_matching_scoring.py  test_application_embedding.py  test_application_reason_format.py  test_commit_analyze_runs.py  test_commit_matching_evaluation.py  test_decision_commit_matching.py  test_decision_commit_matching_scoring.py  test_decision_embedding.py  test_deepgram_response_parsing.py  test_domain_enums.py  test_gemini_retry.py  test_live_transcript_merge.py  test_logging_middleware.py  test_meeting_title_extraction.py  test_timeline_member_id.py
tests/fixtures/: commit_matching_golden_cases.json
utils/: audio.py
(+28 files in other folders)
